# healthcare_consulting

./: README.md
backend/: CMakeLists.txt  db.sql  main.c  server.h
backend/controller/: clientsInjection.h  controller.c  controllerInjection.h
backend/database/: db_connector.h
backend/domain/models/: clientModel.h  diseaseModel.h  doctorModel.h  hospitalModel.h  messageModel.h  modelList.h  response.h  userModel.h
backend/domain/repositories/: chatRepository.h  diseaseRepository.h  doctorRepository.h  hospitalRepository.h  messageRepository.h  queueRepository.h  userRepository.h
backend/domain/services/: authService.c  chatService.c  diseaseService.c  doctorService.c  hospitalService.c  hospitalService.h  queueService.c  serviceList.h  userService.c
backend/models/: modelList.h  response.h  userModel.h
backend/routes/: request.h  router.h
frontend/: CMakeLists.txt  client  client.h  main.c  routes.h  socket.h
frontend/models/: chatModel.h  diseaseModel.h  doctorModel.h  hospitalModel.h  modelList.h  queueModel.h  response.h  userModel.h
frontend/routes/: request.h  router.h
